Fix spacing in about page

--- a/app/assets/stylesheets/components/_form-box.scss
+++ b/app/assets/stylesheets/components/_form-box.scss
@@ -53,6 +53,11 @@
     color: $gc-blue;
   }
 
+  &__section-title {
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
+
   &__body--confirmation {
     padding: 40px 50px;
     i {
